--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
       <p class="texto-turno">Por favor, acérquese al mostrador</p>
     </div>
     <div class="btn-contenedor">
-      <button class="btn" id="anterior">
-        Anterior
-      </button>
+      <button class="btn" id="anterior">Anterior</button>
       <button class="btn" id="siguiente">Siguiente</button>
     </div>
     <div class="cambiar-turno">
